Clear trivial -Xlint residue: gate deprecation, try, lossy-conversions
Closes #269.

Converts the 10 test-only new URL(String) call sites to new URI(String).toURL(),
switches the 2 new Locale(...) call sites to Locale.of(...), documents the
intentional try-with-resources truncation in LoggingHelper.clearLogFile(),
makes the byte-narrowing cast explicit in BaseNmeaFormat.computeChecksum(),
and adds -Xlint:deprecation,try,lossy-conversions next to failOnWarning in the
root pom so the build fails if any of these three categories regresses.